# paltalabs

./: .gitignore  LICENSE  README.md  package.json
backend/: package.json
backend/src/: index.ts
contracts/: Cargo.toml
contracts/src/: lib.rs  yield_farm.rs
docs/: API.md
frontend/: package.json
frontend/pages/: index.tsx
scripts/: deploy.sh
