[package]
name = "paltalabs-contracts"
version = "1.0.0"
edition = "2021"
description = "Paltalabs smart contracts for DeFi on Stellar"
authors = ["Paltalabs Team <team@paltalabs.io>"]
license = "MIT"
repository = "https://github.com/rizz-gal/paltalabs"
homepage = "https://paltalabs.io"

[dependencies]
soroban-sdk = "20.0.0"
soroban-token-sdk = "20.0.0"

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[features]
default = ["export"]
export = []

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
